FIX: scrollbar issues with chat.

--- a/src/components/chat-bar/chatBar.scss
+++ b/src/components/chat-bar/chatBar.scss
@@ -18,6 +18,13 @@
 
     overflow-y: auto;
 
+    // Hide scrollbar
+    &::-webkit-scrollbar {
+      display: none;
+    }
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+
     width: 100%;
     // height: 100%;
 
